--- a/MyVet01.Web/appsettings.json
+++ b/MyVet01.Web/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=MyVet01;User ID=sa;Password=P@ssw0rd;Connect Timeout=180;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=SQL5045.site4now.net;Database=DB_9D5729_Prueba01;User Id=DB_9D5729_Prueba01_admin;Password=P@ssw0rd;Connect Timeout=180;MultipleActiveResultSets=true"
+  }
 }
